# multimodal-ntd-classifier

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SCREENSHOTS.md  exec_exp_gpu_0.sh  exec_exp_gpu_1.sh  exec_test_gpu_0.sh  exec_test_gpu_1.sh  models_trim.txt  pyproject.toml  ram_cleanner.sh  run_all_experiments_gpu_0.sh  run_all_experiments_gpu_1.sh  run_one_experiment_gpu_0.sh  run_one_test_gpu_0.sh  run_one_test_multimodal_gpu_0.sh  run_one_test_resnet50.sh
frontend/: index.html
frontend/css/: style.css
frontend/data/: parasite.json
frontend/js/: app.js  i18n.js
output/data_analysis/: summary_dataset.txt  summary_dataset_antes.txt
src/: generate_convergence_plots.py  generate_summary.py  gpu_available.py  run_experiment.py  run_test.py  run_test_multimodal.py
src/api/: main.py  router.py
src/config/: config.py  config.yaml
src/data/: dataset.py  dataset_analyser.py  dataset_fix.py  exploratory_analysis.py  make_dataset.py  make_vector_base_dataset.py
src/features/: preprocessors.py
src/models/: __init__.py  classifier.py  factory.py  trainer.py
src/models/nets/: base.py  cnn_efficientnet.py  cnn_resnet.py  vit_base.py  vlm_clip.py  vlm_siglip.py
src/multimodal/: config.py  indexer.py  predictor.py
src/server/: server.py
src/services/: inference.py
src/utils/: __init__.py  logger.py
