[tool.poetry]
name = "cadtn-skin-lesion-poc"
version = "0.1.0"
description = ""
authors = ["Mário Carvalho <mariodearaujocarvalho@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
transformers = ">=5.7.0,<6.0.0"
timm = ">=1.0.26,<2.0.0"
kagglehub = ">=1.0.1,<2.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
scikit-learn = "^1.8.0"
opencv-python = "^4.13.0.92"
pandas = "^3.0.2"
tqdm = "^4.67.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"