[tool.poetry]
name = "multimodal-ntd-classifier"
version = "0.1.0"
description = ""
authors = ["Mário Carvalho <mariodearaujocarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
transformers = ">=4.40.0,<5.0.0"
timm = ">=1.0.26,<2.0.0"
kagglehub = ">=1.0.1,<2.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
scikit-learn = "^1.8.0"
opencv-python = "<4.10.0.0"
pandas = "<2.2.0"
tqdm = "^4.67.3"
seaborn = "<0.13.0"
matplotlib = "^3.10.9"
pydantic = "^2.13.3"
pydantic-settings = "^2.14.0"

# Ajuste para versões compatíveis com o driver 575.64.03 (CUDA 12.x)
torch = {version = "2.2.2", source = "pytorch_gpu"}
torchvision = {version = "0.17.2", source = "pytorch_gpu"}
torchaudio = {version = "2.2.2", source = "pytorch_gpu"}
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cublas-cu12 = "12.1.3.1"
numpy = "<2.0.0"
pyyaml = "^6.0.3"
sentencepiece = "^0.2.1"
python-multipart = "^0.0.27"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"